--- a/src/components/base.scss
+++ b/src/components/base.scss
@@ -11,6 +11,12 @@ $table-cell-border-color: #ddd;
 .table {
   font-size: 12px;
 
+  .header-cell-index {
+    width: 35px;
+    max-width: 35px;
+    min-width: 35px;
+  }
+
   .header-cell {
     width: 100%;
     height: 100%;
