Change bootstrap theme

--- a/src/base.scss
+++ b/src/base.scss
@@ -7,6 +7,10 @@ a {
   cursor: pointer;
 }
 
+.table-responsive {
+  overflow-x: auto;
+}
+
 .title-container {
   margin-top: -23px;
   background-color: $colour2;
