Add roster to team info page
- Update grid behaviour so you can show all rows
  without pagination if required
- Fix styling issues
- Add title text to grid header cells
- Use Team IDs in team info URLs

--- a/src/base.scss
+++ b/src/base.scss
@@ -24,6 +24,8 @@ a {
 
 .panel-heading {
   text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 600;
   border-bottom-style: dashed;
   border-bottom-width: 1px;
 }
