--- a/src/views/teamInfo/teamInfo.template.html
+++ b/src/views/teamInfo/teamInfo.template.html
@@ -14,11 +14,17 @@
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <div class="col-md-2"><!-- spacer --></div>
-    <div class="col-md-8">
-
+    <div class="row">
+      <div class="col-md-2"><!-- spacer --></div>
+      <div class="col-md-8">
+        <ul class="nav navbar-nav">
+          <li class="active">
+            <a>Roster</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-2"><!-- spacer --></div>
     </div>
-    <div class="col-md-2"><!-- spacer --></div>
   </div>
 </nav>
 
@@ -31,7 +37,7 @@
           Roster
         </div>
         <div class="panel-body">
-
+          <roster-grid team="$ctrl.teamInfo.UniqueID"></roster-grid>
         </div>
       </div>
     </div>
