--- a/src/views/teamList/teamList.template.html
+++ b/src/views/teamList/teamList.template.html
@@ -7,7 +7,7 @@
       </div>
       <div class="panel-body text-center">
         <div class="team-list-item" ng-repeat="team in $ctrl.proTeamList">
-          <a ng-href="{{ '/#!/teams/pro/' + team.Abbre }}"
+          <a ng-href="{{ '/#!/teams/pro/' + team.UniqueID }}"
             title="{{ team.Name }}">{{ team.Abbre }}</a>
         </div>
       </div>
@@ -20,7 +20,7 @@
       </div>
       <div class="panel-body text-center">
         <div class="team-list-item" ng-repeat="team in $ctrl.farmTeamList">
-          <a ng-href="{{ '/#!/teams/farm/' + team.Abbre }}"
+          <a ng-href="{{ '/#!/teams/farm/' + team.UniqueID }}"
             title="{{ team.Name }}">{{ team.Abbre }}</a>
         </div>
       </div>
