--- a/src/components/grid/grid.template.html
+++ b/src/components/grid/grid.template.html
@@ -1,4 +1,11 @@
-<div class="table-responsive">
+<div class="table-responsive base-grid">
+
+  <div class="loader-overlay" ng-if="$ctrl.loading">
+    <div class="loader-inner line-scale">
+      <div></div><div></div><div></div><div></div><div></div>
+    </div>
+  </div>
+
   <table class="table table-striped table-hover table-condensed">
     <thead>
       <th ng-if="$ctrl.gridOptions.showIndexColumn"
