--- a/src/components/grid/grid.template.html
+++ b/src/components/grid/grid.template.html
@@ -6,7 +6,10 @@
     </div>
   </div>
 
-  <table class="table table-striped table-hover table-condensed">
+  <span ng-if="!$ctrl.loading && !$ctrl.rows || $ctrl.rows.length === 0">No results found.</span>
+
+  <table class="table table-striped table-hover table-condensed"
+    ng-hide="!$ctrl.loading && !$ctrl.rows || $ctrl.rows.length === 0">
     <thead>
       <th ng-if="$ctrl.gridOptions.showIndexColumn"
         class="header-cell-index"
@@ -48,7 +51,7 @@
       <a class="page-link" ng-if="page > 0" ng-click="$ctrl.goToPage(page)">{{ page }}</a>
     </li>
     <li>
-      <a ng-click="$ctrl.goToPage($ctrl.totalPages)">
+      <a ng-click="$ctrl.goToPage($ctrl.totalPages || 1)">
         <span>&raquo;</span>
       </a>
     </li>
