Make names more consistent
- Skaters = forwards/dmen
- Players = players and goalies
- Info grid is really a ratings grid

--- a/src/views/skaterStats/skaterStats.template.html
+++ b/src/views/skaterStats/skaterStats.template.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="col-md-2"><!-- spacer --></div>
     <div class="col-md-8">
-      <league-selector initial-league="$ctrl.playerStatsService.selectedLeague"
+      <league-selector initial-league="$ctrl.skaterStatsService.selectedLeague"
         on-change="$ctrl.leagueUpdated(league)"></league-selector>
     </div>
     <div class="col-md-2"><!-- spacer --></div>
