Add transactions grid
- Add coach/GM info and pro/farm link to team info page

--- a/src/views/appMain/appMain.template.html
+++ b/src/views/appMain/appMain.template.html
@@ -12,7 +12,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">Latest Transactions</div>
       <div class="panel-body">
-        Example
+        <grid grid-options="$ctrl.gridOptions"></grid>
       </div>
     </div>
   </div>
