--- a/src/views/teamInfo/teamInfo.template.html
+++ b/src/views/teamInfo/teamInfo.template.html
@@ -3,8 +3,44 @@
     <div class="col-md-2"><!-- spacer --></div>
     <div class="col-md-8">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-sm-6">
           <h3><span ng-bind="$ctrl.teamInfo.Name"></span></h3>
+        </div>
+        <div class="col-sm-6">
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="team-info-group">
+                <label>GM:</label>
+                <span ng-bind="$ctrl.teamInfo.GMName || 'None'"></span>
+              </div>
+              <div class="team-info-group">
+                <label>Coach: </label>
+                <span ng-bind="$ctrl.teamInfo.CoachName"></span>
+              </div>
+              <div class="team-info-group" ng-if="$ctrl.league === 'farm'">
+                <label>Pro Team:</label>
+                <a ng-href="{{ '#!/teams/pro/' + $ctrl.teamInfo.UniqueID }}">
+                  <span ng-bind="$ctrl.teamInfo.AssociatedTeamAbbre"></span>
+                </a>
+              </div>
+              <div class="team-info-group" ng-if="$ctrl.league === 'pro'">
+                <label>Farm Team:</label>
+                <a ng-href="{{ '#!/teams/farm/' + $ctrl.teamInfo.UniqueID }}">
+                  <span ng-bind="$ctrl.teamInfo.AssociatedTeamAbbre"></span>
+                </a>
+              </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="team-info-group">
+                <label>Team Morale: </label>
+                <span ng-bind="$ctrl.teamInfo.Morale"></span>
+              </div>
+              <div class="team-info-group">
+                <label>Team Overall: </label>
+                <span ng-bind="$ctrl.teamInfo.TeamOverall"></span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
