--- a/src/views/teamList/teamList.template.html
+++ b/src/views/teamList/teamList.template.html
@@ -1,6 +1,5 @@
-<div class="container-fluid">
-  <div class="col-md-2"><!-- spacer --></div>
-  <div class="col-md-4">
+<div class="container">
+  <div class="col-md-6">
     <div class="panel panel-default">
       <div class="panel-heading">
         Pro
@@ -13,7 +12,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-6">
     <div class="panel panel-default">
       <div class="panel-heading">
         Farm
@@ -26,5 +25,4 @@
       </div>
     </div>
   </div>
-  <div class="col-md-2"><!-- spacer --></div>
 </div>
