--- a/src/views/appMain/appMain.template.html
+++ b/src/views/appMain/appMain.template.html
@@ -1,6 +1,5 @@
-<div class="container-fluid">
-  <div class="col-md-2"><!-- spacer --></div>
-  <div class="col-md-2">
+<div class="container">
+  <div class="col-md-4">
     <div class="panel panel-default">
       <div class="panel-heading">Latest Scores</div>
       <div class="panel-body">
@@ -8,7 +7,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-8">
     <div class="panel panel-default">
       <div class="panel-heading">Latest Transactions</div>
       <div class="panel-body">
@@ -16,5 +15,4 @@
       </div>
     </div>
   </div>
-  <div class="col-md-2"><!-- spacer --></div>
 </div>
