--- a/src/views/skaterStats/skaterStats.template.html
+++ b/src/views/skaterStats/skaterStats.template.html
@@ -1,16 +1,14 @@
 <nav class="navbar navbar-default navbar-stacked">
-  <div class="container-fluid">
-    <div class="col-md-2"><!-- spacer --></div>
-    <div class="col-md-8">
+  <div class="container">
+    <div class="col-md-12">
       <league-selector initial-league="$ctrl.skaterStatsService.selectedLeague"
         on-change="$ctrl.leagueUpdated(league)"></league-selector>
     </div>
-    <div class="col-md-2"><!-- spacer --></div>
   </div>
 </nav>
-<div class="container-fluid">
-  <div class="col-md-2"><!-- spacer --></div>
-  <div class="col-md-8">
+
+<div class="container">
+  <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading">
         Player Statistics
@@ -20,5 +18,4 @@
       </div>
     </div>
   </div>
-  <div class="col-md-2"><!-- spacer --></div>
 </div>
