--- a/src/views/appMain/appMain.template.html
+++ b/src/views/appMain/appMain.template.html
@@ -1,9 +1,13 @@
 <div class="container">
   <div class="col-md-4">
     <div class="panel panel-default">
-      <div class="panel-heading">Latest Scores</div>
+      <div class="panel-heading">Upcoming Games</div>
       <div class="panel-body">
-        Example
+        <div class="score-card-container">
+          <score-card ng-repeat="upcomingGame in $ctrl.upcomingGames.rows"
+            game-info="upcomingGame">
+          </score-card>
+        </div>
       </div>
     </div>
   </div>
