--- a/src/components/grid/grid.template.html
+++ b/src/components/grid/grid.template.html
@@ -8,7 +8,7 @@
 
   <span ng-if="!$ctrl.loading && !$ctrl.rows || $ctrl.rows.length === 0">No results found.</span>
 
-  <table class="table table-striped table-hover table-condensed"
+  <table class="table table-hover table-condensed"
     ng-hide="!$ctrl.loading && !$ctrl.rows || $ctrl.rows.length === 0">
     <thead>
       <th ng-if="$ctrl.gridOptions.showIndexColumn"
