--- a/src/views/skaterStats/skaterStats.template.html
+++ b/src/views/skaterStats/skaterStats.template.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-stacked">
   <div class="container">
     <div class="col-md-12">
-      <league-selector initial-league="$ctrl.skaterStatsService.selectedLeague"
+      <league-selector initial-league="$ctrl.skaterStatsGridService.selectedLeague"
         on-change="$ctrl.leagueUpdated(league)"></league-selector>
     </div>
   </div>
