--- a/src/base.scss
+++ b/src/base.scss
@@ -1,4 +1,6 @@
 @import 'variables';
+@import '../node_modules/loaders.css/src/variables';
+@import '../node_modules/loaders.css/src/animations/line-scale';
 
 body {
   font-size: 14px;
