Add player info page and clean up project
- Make minification step manual as it was making the
  gulp task take too long
- Add logo
- Add link for generated pages
- Switch grid columns  to be returned by a function so
  there is no issue modifying them in different places
- Add schedule to team info page

--- a/src/components/appMenu/appMenu.scss
+++ b/src/components/appMenu/appMenu.scss
@@ -1,3 +1,10 @@
 a.dropdown-toggle {
   cursor: pointer;
 }
+
+.navbar-brand.brand-image {
+  width: 80px;
+  background-image: url("/images/SHL_small.png");
+  background-position: center;
+  background-repeat: no-repeat;
+}
