--- a/src/base.scss
+++ b/src/base.scss
@@ -10,6 +10,14 @@ a {
   cursor: pointer;
 }
 
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 .table-responsive {
   overflow-x: auto;
 }
@@ -31,6 +39,10 @@ a {
   font-weight: 600;
   border-bottom-style: dashed;
   border-bottom-width: 1px;
+}
+
+.button-group-margin {
+  margin: 15px 0;
 }
 
 $table-cell-border-color: #ddd;
