Add goalie info page

--- a/src/views/skaterInfo/skaterInfo.template.html
+++ b/src/views/skaterInfo/skaterInfo.template.html
@@ -64,8 +64,8 @@
               <th title="Checking">CK</th>
               <th title="Fighting">FG</th>
               <th title="Discipline">DI</th>
-              <th title="Skating">ST</th>
-              <th title="Strength">CK</th>
+              <th title="Skating">SK</th>
+              <th title="Strength">ST</th>
               <th title="Endurance">EN</th>
               <th title="Durability">DU</th>
               <th title="Puck Handling">PH</th>
